# jolene

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.yml  justfile
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.claude/: settings.local.json
.github/workflows/: release.yml  rust.yml
docs/: ISSUES.md  SPEC.md  TEMPLATING.md  gaps.md  todo.md
docs/proposals/: requirements-file.md  security-improvements.md  templating.md
src/: cli.rs  config.rs  content_check.rs  discovery.rs  git.rs  main.rs  marketplace.rs  output.rs  skill_check.rs  state.rs  symlink.rs  template.rs  validation.rs
src/commands/: contents.rs  doctor.rs  info.rs  install.rs  list.rs  mod.rs  uninstall.rs  update.rs
src/types/: content.rs  manifest.rs  mod.rs  source.rs  state.rs  target.rs  var_value.rs
tests/: integration.rs
