[package]
name = "jolene"
version = "0.1.4"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
sha2 = "0.10.9"
serde_json = "1"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
